# morozko

morozko/: Dockerfile  README.md  README_SETUP_RU.md  pyproject.toml
morozko/data/: Morozko_master_data_template_v3_logic_for_current_bot_code.xlsx  morozko.db
morozko/morozko_bot/: bitrix.py  bot.py  config.py  excel_loader.py  keyboards.py  models.py  rules_engine.py  storage.py
morozko/morozko_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
morozko/scripts/: build_ready_bundle.sh
morozko/tests/: test_recalculation_flow.py  test_rules_engine.py
