[project]
name = "morozko-bot"
version = "0.1.0"
description = "Telegram bot Morozko with Excel-driven flow and Bitrix24 integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.8.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
